--- a/media/cv-screen.css
+++ b/media/cv-screen.css
@@ -120,10 +120,11 @@ h1,h2,h3,h4 {
 
 h1 {
 	text-align: left;
-	font-size: 2.5em;
+	font-size: 3em;
 	line-height: 1em;
 	position: relative;
 	left: 33%;
+	margin-bottom: 0.2em;
 }
 
 h1+p {
